--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-scikit-learn == 0.22.1
-pandas
-numpy
-Flask
+numpy>=1.21.0 
+pandas>=1.3.0 
+scikit-learn>=1.7.0 
+nltk>=3.6.2 
+Flask>=2.0.1 
+Flask-CORS>=3.0.10
+requests>=2.26.0
+gunicorn>=20.1.0
